# bqc

./: BqcConfig.h.in  CMakeLists.txt  Doxygen.config  README.md  bqc-defns.web  bqc-inp  bqc-run  bqc.cc  bqc.web  compile  create-doc  make-bqc-inp  web.vim
example/: cis.py
fortran/: bqc-run  bqc.nw
fortran/doc/figures/: dmat.eps  dmat.readme
fortran/misc/vim/: nw.vim_syntax
fortran/old_bqc/: README.md  web.vim
fortran/old_bqc/testbenches/cond/: fort.10
fortran/old_bqc/testbenches/cond/latex/: doxygen.sty
fortran/old_bqc/testbenches/exact/: main.f
fortran/old_bqc/testbenches/exact/test/: define.f
fortran/old_bqc/testbenches/genints/: INDEX.tex  defs.f  defs.tex  gints.f  gugjk.vim
fortran/old_bqc/testbenches/genints/cook/: fmch.aux  fmch.tex  fmch.web  genints.f  genints.tex  pseudor.f
fortran/old_bqc/testbenches/guhf/: MODULES.tex  do  getint.f  scfGR.f  some.web
fortran/old_bqc/testbenches/guhf/test/: case.f  scfgr-1.web
fortran/old_bqc/testbenches/ppp/: head.f  lcao-water
fortran/old_bqc/testbenches/scf/: defns.hweb  dods.web_old  gints.f  integral.web  utilities.f
fortran/old_bqc/testbenches/scf/whole/: MODULES.tex  fort.61  main.toc
misc/vim/: nw.vim_ftdetect
old_bqc/: RM  bqc_temp.web  make-bqc-inp
old_bqc/example/: cis.py  napht.inp
old_bqc/testbenches/cond/test/: a.out  ifndef.f
old_bqc/testbenches/exact/: getint.f  head.f  lcao-water  scfGR.f
old_bqc/testbenches/exact-improved/: lcao-water  main.f
old_bqc/testbenches/exact/latex/: refman.aux
old_bqc/testbenches/exact/test/: dowhile.f  loop.f  repeat.f
old_bqc/testbenches/exact/test/happy/: head.f
old_bqc/testbenches/genints/: a.out  defs.hweb  gints.aux  gints.web  integral.f_old  integral.web
old_bqc/testbenches/genints/cook/: genints.web  integral.web_cook  pseudor.tex  pseudor.web  putint.f  utils.aux  utils.f  utils.tex  utils.web
old_bqc/testbenches/genints/test/: a.out  indices.f
old_bqc/testbenches/guhf/: beigen.toc  beigen.web  head.f  some.f  temp
old_bqc/testbenches/guhf/test/: scfGR.f_correct  scfgr-1.f
old_bqc/testbenches/scf/: do  dods.web  gints.web  matrix.f  matrix.web  scf.f  scfR.f  web.vim
old_bqc/testbenches/scf/whole/: INDEX.tex  main.tex
old_bqc/testbenches/scf/whole/test/: inp
src/: CMakeLists.txt
src/basis/: CMakeLists.txt  basis.cc  libbasis.h
src/ints/: CMakeLists.txt  ints.cc  libints.h
src/io/: CMakeLists.txt  libio.cc  libio.h
src/math/: CMakeLists.txt  libmath.cc  libmath.h
src/mol/: CMakeLists.txt  atom.cc  libmol.h  mol.cc
src/qm/: CMakeLists.txt
src/qm/scf/: CMakeLists.txt  scf.cc
testbenches/cond/: compile  eigen.f  head.f  lcao-water  main.f
testbenches/exact/: fort.10
testbenches/exact-improved/: fort.10  fort.12  scfGR.f  use.f
testbenches/exact/latex/: refman.dvi
testbenches/exact/test/: eigen-test
testbenches/genints/: MODULES.tex  do  fort.17  gints.tex  gints.toc  integral.aux  integral.f  integral.tex  integral.toc  main.f  web.vim
testbenches/genints/cook/: fmch.f  fmch.toc  genints.aux  genints.toc  integral.f_cook  pseudor.dvi  utils.toc
testbenches/guhf/: INDEX.tex  a.out  beigen.aux  beigen.f_old  beigen.tex  fort.10  lcao-water  main.f  matrix.f  shalf.f  some.tex
testbenches/guhf/html/: index.html
testbenches/guhf/test/: a.out  scfGR.f_new  scfGR.f_old  scfgr-1.tex  spinortest.f
testbenches/ppp/: fort.10  getint.f  main.f  test.f
testbenches/ppp/latex/: do  refman.tex
testbenches/ppp/test/: a.out  sub.f
testbenches/scf/: a.out  dods.f  fort.17  integral.f  main.web  scf.web  spinor.f  temp  utilities.web
testbenches/scf/whole/: a  a.out  fort.17  inp  main.aux  main.f  main.web  mol.py
testbenches/scf/whole/test/: a.out  read.f
